# ChangeLog for dev-lisp/abcl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lisp/abcl/ChangeLog,v 1.4 2008/02/13 14:11:55 betelgeuse Exp $

*abcl-0.0.9-r1 (13 Feb 2008)

  13 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> +abcl-0.0.9-r1.ebuild:
  Migrate to generation 2 java eclasses.

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  01 May 2006; Matthew Kennedy <mkennedy@gentoo.org>
  files/digest-abcl-0.0.9, Manifest:
  Fix digests.

*abcl-0.0.9 (11 Jan 2006)

  11 Jan 2006; Matthew Kennedy <mkennedy@gentoo.org> +metadata.xml,
  +abcl-0.0.9.ebuild:
  Initial port.  Ebuild contributed by Matthew Kennedy <mkennedy@gentoo.org>.
