@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST abcl-0.0.9.tar.gz 592410 RMD160 58e158733665865009d414c1a99d2aec90cf59c1 SHA1 114f8f0049fd7820bdab524f6c83a0ef2831c149 SHA256 ee634443a4a77b2bb9324fa4ff900b15aea5081042fde039045b535d28a8049b
-EBUILD abcl-0.0.9-r1.ebuild 2156 RMD160 2846de49ad86d10bddcaa4109ba4dd9a55cd6193 SHA1 2a74060e772ede5279ce7e14e574063def34f406 SHA256 09d6161f74518025adc70a5efc7b017383d2861c48f8426730a45686886d58bc
+EBUILD abcl-0.0.9-r1.ebuild 2118 RMD160 a89fe92c514b8c10b045fe40646ab1764d1a0db7 SHA1 4d88572b26b2ef79f92f8f31283e07971fbc1d61 SHA256 ce22567966b0ca7f4cd56b9943753b0155bf3549fd1421c63fde38d13c030924
 EBUILD abcl-0.0.9.ebuild 2072 RMD160 7d66e0fc97d24ee0eb4e78f589ec2ec0b636c073 SHA1 48a81ccb102e8c3b1cf52915a27b4998a8fa71b4 SHA256 0aa618e3312fea61d780ef6011607ced61921ac45d3a850f01b9e11a7170ffef
-MISC ChangeLog 745 RMD160 6b304e8fb73eb53a73627bbe01768fa410ba3c0c SHA1 e49bd542e62192b296b1e10121cf44949e76bee4 SHA256 cb532abc264e77d9a14d1d01a385fd580bb20ccced5c1b83d99a1c649c6a039d
-MISC metadata.xml 164 RMD160 5edb79931b874dc3a72128f0742b9d4c4eb3c8c1 SHA1 2f781e1fca36d790a027079805d56cf397e6a6f8 SHA256 f8efc9385015233c71f279f85bd0a327525b7136cf8714cc04449d8bea4ce22f
+MISC ChangeLog 914 RMD160 b6200c06b137400e2eba61c1228c33405ca39560 SHA1 e57f4c967237fc5d5537bb1184f9cf7aa0bf2b7f SHA256 c7c1d9ff14ee88a27ea60409e951941426e9809a543d19703d7364921f9894cb
+MISC metadata.xml 335 RMD160 49b355462e073d42507dc28f63ddf2c7947b5e25 SHA1 d1ad2d15388e257f7f8c7fec4cb996dea750f2cd SHA256 89b450a097ef519f758e84981d0c9b888137129bd05baba2b598e789938da985
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHsvqzcxLzpIGCsLQRAhlmAJ0Xr9z9G8av5EqwGM6l6eYGVya1ZQCfZzOF
-AI64fl+RuaVwfbv/hwdanOs=
-=5ahN
+iD8DBQFHsvtNcxLzpIGCsLQRAjaLAJwOkwxc3krXHLLfyF/0sjsHA9Xq7ACdEvZD
+z+Pcqy+XZpdKJatMnPKFn4A=
+=2taO
 -----END PGP SIGNATURE-----
