@@ -1,10 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/abcl/abcl-0.0.9-r1.ebuild,v 1.1 2008/02/13 14:11:55 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/abcl/abcl-0.0.9-r1.ebuild,v 1.2 2008/02/13 14:14:32 betelgeuse Exp $
 
 inherit eutils java-pkg-2
 
-DESCRIPTION="Armed Bear Common Lisp (ABCL) is an implementation of ANSI Common Lisp that runs in a Java virtual machine."
+DESCRIPTION="ABCL is an implementation of ANSI Common Lisp that runs in a Java VM."
 HOMEPAGE="http://armedbear.org/abcl.html"
 SRC_URI="http://armedbear.org/${P}.tar.gz"
 LICENSE="GPL-2"
