@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>common-lisp</herd>
+	<herd>common-lisp</herd>
+	<herd>java</herd>
+	<longdescription>
+		Armed Bear Common Lisp (ABCL) is an implementation of ANSI Common
+		Lisp that runs in a Java virtual machine.
+	</longdescription>
 </pkgmetadata>
