@@ -1,6 +1,10 @@
 # ChangeLog for dev-lisp/abcl
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/abcl/ChangeLog,v 1.4 2008/02/13 14:11:55 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/abcl/ChangeLog,v 1.5 2008/02/13 14:14:32 betelgeuse Exp $
+
+  13 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml,
+  abcl-0.0.9-r1.ebuild:
+  Shorten description and add java herd besides common-lisp to metadata.xml.
 
 *abcl-0.0.9-r1 (13 Feb 2008)
 
